fixed static vertical scrollbar to prevent ugly design jumps

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 body {
 	padding-top: 70px;
+	overflow-y: scroll;
 }
 
 .icon {
